jilles      2007/03/25 19:29:48 UTC	(20070325-7983)
  Log:
  Add  datarootdir = @datarootdir@  to all Makefile.in
  to make autoconf 2.60 happy. Older autoconf versions
  will neither expand nor use this.
  

  Changes:	Modified:
  +1 -0		trunk/Makefile.in (File Modified) 
  +1 -0		trunk/contrib/Makefile.in (File Modified) 
  +1 -0		trunk/modules/Makefile.in (File Modified) 
  +1 -0		trunk/modules/backend/Makefile.in (File Modified) 
  +1 -0		trunk/modules/chanserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/crypto/Makefile.in (File Modified) 
  +1 -0		trunk/modules/gameserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/global/Makefile.in (File Modified) 
  +1 -0		trunk/modules/memoserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/nickserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/operserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/protocol/Makefile.in (File Modified) 
  +1 -0		trunk/modules/saslserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/xmlrpc/Makefile.in (File Modified) 
  +1 -0		trunk/src/Makefile.in (File Modified) 


pippijn     2007/03/25 15:17:17 UTC	(20070325-7981)
  Log:
  Fixed some compiler warnings regarding signedness.
  

  Changes:	Modified:
  +1 -1		trunk/modules/protocol/ptlink.c (File Modified) 
  +2 -2		trunk/modules/saslserv/crypt.c (File Modified) 
  +25 -25	trunk/modules/saslserv/dh-blowfish.c (File Modified) 
  +2 -2		trunk/src/table.c (File Modified) 


jilles      2007/03/25 14:12:08 UTC	(20070325-7979)
  Log:
  Add command_success_table() for returning tables.
  No sourceinfo_vtable entry for this yet.
  

  Changes:	Modified:
  +1 -8		trunk/contrib/os_tabletest.c (File Modified) 
  +1 -1		trunk/include/atheme.h (File Modified) 
  +1 -0		trunk/include/services.h (File Modified) 
  +4 -32	trunk/src/services.c (File Modified) 


jilles      2007/03/24 22:39:38 UTC	(20070324-7977)
  Log:
  operserv clones: don't send more than one warning per IP